# SoundXplorer

./: .gitignore  CMakeLists.txt
Source/: AudioPreviewEngine.cpp  AudioPreviewEngine.h  FileListComponent.cpp  FileListComponent.h  LibraryBrowserComponent.cpp  LibraryBrowserComponent.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleLibrary.cpp  SampleLibrary.h  SearchBarComponent.cpp  SearchBarComponent.h  TagFilterComponent.cpp  TagFilterComponent.h  TransportBarComponent.cpp  TransportBarComponent.h
